src/builder/tests/snapshots/ciboulette2postgres__builder__tests__union_select_all__multi.snap
---
source: src/builder/tests/union_select_all.rs
expression: res

---
(
    "SELECT * FROM \"public\".\"articles\" UNION ALL SELECT * FROM \"public\".\"peoples\"",
    Ciboulette2SqlArguments {
        inner: [],
    },
)
