src/builder/tests/snapshots/ciboulette2postgres__builder__tests__union_select_all__no_table.snap
---
source: src/builder/tests/union_select_all.rs
expression: res

---
(
    "",
    Ciboulette2SqlArguments {
        inner: [],
    },
)
